Re-fix navbar line spacing

--- a/docs/index.css
+++ b/docs/index.css
@@ -57,6 +57,11 @@ nav a.active {
   align-items: center;
 }
 
+.navigation a {
+  height: 20px;
+  line-height: 28px;
+}
+
 /* Hamburger Menu Styles */
 .hamburger {
   display: none;
@@ -97,6 +102,8 @@ nav a.active {
 .logo-title {
   font-size: 40px;
   color: var(--primary);
+  height: 20px;
+  line-height: 28px;
 }
 main {
   width: 100%;
